syntax = "proto3";
package orders.transactions.take;

import "gogoproto/gogo.proto";
import "ids/base/identity_id.proto";
import "ids/base/order_id.proto";

message Message {
  string from = 1;
  assetmantle.schema.ids.base.IdentityID from_i_d = 2;
  string taker_ownable_split = 3 ;
  assetmantle.schema.ids.base.OrderID order_i_d = 4;
}